добавление пагинации к истории пополнений и выводов, обновления описания  в свагере
